<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>package_2</name>
  <version>0.0.0</version>
  <description>Este pacote simula a leitura de um sensor com uma taxa de amostragem de 1 Hz. Os
    dados do sensor passam por um filtro de média móvel considerando os últimos 5 valores adquiridos
    pelo sensor. Esse pacote provem duas interfaces de serviço, a primeira retorna os últimos 64
    resultados gerados pelo filtro, e a segunda zera os dados gerados pelo filtro.</description>
  <maintainer email="danilo_gsch@hotmail.com">Danilo Giacomin Schneider</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>